<resources>
    <string name="app_name">sow and grow</string>
    <string name="get_started_text">Life is a garden!\nSow and Grow \nhelps you make it bloom.</string>
    <string name="forgot_password_msg">Don\'t worry! it happens. Please enter the email address associated with your account.</string>
    <string name="on_submit_msg">Check out your mailbox, you will receive an email containing link where you can reset your password</string>
    <string name="heading_one">Search For Plants</string>
    <string name="heading_two">Build Your Own Garden</string>
    <string name="heading_three">Health Assessment</string>
    <string name="desc_one">Using the camera, you can search for various plants.</string>
    <string name="desc_two">Add your home plants and check their water requirements</string>
    <string name="desc_three">Plant Doctor will check the health of your plants</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="default_name">John Doe</string>
    <string name="default_location">Unknown</string>
    <string name="default_email">Unknown</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_location">Enter your location</string>
    <string name="hint_email">Enter your email</string>
    <string name="edit_button">Edit Profile</string>
    <string name="save_button">Save Changes</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="common_name">Common Name</string>
    <string name="choose_plant_photo">Take or choose a new plant photo.</string>
    <string name="botanical_name">Botanical Name </string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="message_need_permission">Need permissions</string>
    <string name="message_grant_permission">Grant permission</string>
    <string name="label_setting">Settings</string>
    <string name="my_plants">My Plants</string>
    <string name="no_plants_added">
        No plants added.\n
        To add new plant go to "Add Plant." </string>
    <string name="snakeplant">Plant Type : Evergreen Perennial\nBloom time : Spring(blooms are rare)\nColor : Greenish-white\nNative Area : Tropical West Africa
    \nToxicity : Toxic\nSun Exposure : Full Sun to Low Light</string>
    <string name="aloeveraplant">Plant Type : Succulent\nBloom time : Blooming occurs in Late Spring / Early Summer\nColor : Yellow,Red,Orange\nNative Area : Africa
    \nToxicity : Toxic\nSun Exposure : Full Sun / Partial Shade</string>
    <string name="arecaplant"> Plant Type : Evergreen Houseplant or Perennial\nBloom time : Summer\nColor : Pale Yellow\nNative Area : Madagascar and South India
    \nToxicity : Non-Toxic\nSun Exposure : Bright , Indirect Light</string>
    <string name="arrowheadvine">Plant Type : Vine\nBloom time : Summer(Rarely Flowers)\nColor : White\nNative Area : South America, Mexico
    \nToxicity : Non-Toxic\nSun Exposure : Partial Shade </string>
    <string name="bostonfern">Plant Type : Herbaceous Perennial Fern\nBloom time : Non-Flowering\nNative Area : Tropical Regions in America, Africa and Polynesia
    \nToxicity : Non-Toxic\nSun Exposure : Moist Humusy , well-drained soil </string>
    <string name="crotonplant">Plant Type : Evergreen Shrub\nBloom time : Indoor Plants Rarely Flowers\nNative Area : Tropical Asia and Pacific Region
    \nToxicity : Toxic\nSun Exposure : Bright , Indirect Light </string>
    <string name="hibiscus">Plant Type : Annual and Perennial Herbaceous\nBloom time : Summer , Fall, and Year-Round in Tropical climes\nColor : Various,incluing White,Red,Pink,etc\nNative Area : Asia, North America
    \nToxicity : Non-Toxic\nSun Exposure : Full Sun , Partial Shade </string>
    <string name="tulsi">Plant Type : Annual , Perennial\nBloom time : Seasonal\nColor : Green\nNative Area : Indian Sub-Continent , Africa
    \nToxicity : Non-Toxic\nSun Exposure : Full Sun </string>
    <string name="jade">Plant Type : Evergreen Perennial\nBloom time : Spring and Summer\nColor : White\nNative Area : South Africa
    \nToxicity : Toxic\nSun Exposure : well-drained , loamy potting mix </string>
    <string name="lavender">Plant Type : Herbaceous Perennial\nBloom time : Summer\nColor : Purple, Violet-Blue,Pale-Pink\nNative Area : Europe
    \nToxicity : Toxic\nSun Exposure : Full Sun </string>
    <string name="bamboo">Plant Type : Perennial Shrub\nBloom time : Fall,Winter(does not bloom indoors)\nColor : White\nNative Area : Africa
    \nToxicity : Toxic\nSun Exposure : Partial Shade </string>
    <string name="marigold">Plant Type : Herbaceous,Annual\nBloom time : Summer\nColor : Yellow,Orange,White,etc\nNative Area : Southern North America(Mexico)
    \nToxicity : Toxic\nSun Exposure : Full Sun </string>
    <string name="moneyplant">Plant Type : Evergreen Perennial\nBloom time : Spring\nColor : White\nNative Area : China
    \nToxicity : Non-Toxic\nSun Exposure : Bright , Indirect Light </string>
    <string name="philodendron">Plant Type : Houseplant,Perennial\nBloom time : None\nColor : None\nNative Area : RainForest of Tropical Central and South America
    \nToxicity : Toxic\nSun Exposure : Equal Parts Loam,Sand and peat </string>
    <string name="roseus">Plant Type : Herbaceous perennial\nBloom time : June to Frost\nColor : White,Pink,Mauve,Red\nNative Area : Madagascar
    \nToxicity : Toxic\nSun Exposure : Full Sun to part shade </string>
    <string name="rubber">Plant Type : Evergreen Shrub\nColor : Green\nNative Area : India, Nepal, Myanmar, China, Malaysia
    \nToxicity : Toxic\nSun Exposure : Part Sun </string>
    <string name="spiderplant">Plant Type : Herbaceous perennial\nBloom time : None\nColor : Leaves with creamy margins and a green center\nNative Area : South Africa
    \nToxicity : Non-Toxic\nSun Exposure : Bright, Indirect Light </string>
    <string name="weepingfig">Plant Type : Evergreen tree\nBloom time : Rarely flowers indoors\nColor : Red\nNative Area : India , Southeast Asia , Northern Australia
    \nToxicity : Toxic\nSun Exposure : Bright , Indirect Light </string>
    <string name="ZZplant">Plant Type : Tropical Perennial\nBloom time : Spring\nColor : Yellow-Brown spadix\nNative Area : Eastern Africa
    \nToxicity : Toxic\nSun Exposure : Bright to Low Indirect Light </string>
    <string name="ashwagandha">Plant Type : Annual Shrub\nBloom time : Late spring , Summer , Early Fall\nColor : Green or Pale Green\nNative Area : MiddleEast, Parts of Africa and Asia
    \nToxicity : Toxic\nSun Exposure : Full Sun to part shade </string>
    <string name="betelplant">Plant Type : Trailing or Climbing Evergreen Perennial\nBloom time : Rare in Cultivation\nColor : Green, Purple-Magenta Foliage\nNative Area : Peru
    \nToxicity : Non-Toxic\nSun Exposure : Bright , Indirect Light </string>
    <string name="bougainvillea">Plant Type : Perennial Shrub\nBloom time : Summer , Spring , Fall\nColor : Pink , Purple , Red , Yellow\nNative Area : South America
    \nToxicity : Non-Toxic\nSun Exposure :  Full Sun </string>
    <string name="rose">Plant Type : Perennial , Rose\nBloom time : Summer , Fall\nColor : Pink , Red , Etc\nNative Area : Hybrid , No native range
    \nToxicity : Non-Toxic\nSun Exposure :  Full Sun </string>
    <string name="peacelilyplant">Plant Type : Flowering Tropical Plant\nBloom time : Spring\nColor : White , Yellow\nNative Area : The RainForest of Central and South America
    \nToxicity : Toxic\nSun Exposure :  Medium , Indirect Light </string>
    <string name="neem">Plant Type : Broadleaf Evergreen Perennial\nBloom time : Mid-Spring\nColor : White Blossoms\nNative Area : Srilanka , Bangladesh , Pakistan , India and Nepal
    \nToxicity : Toxic\nSun Exposure :  Full Sun to Partial Shade </string>
    <string name="bonsai">Plant Type : Deciduous or semi-deciduous tree \nBloom time : August-September\nColor : Silver bark: Small Serrated Leaves of Green Color\nNative Area : China and Southeast Asia
    \nToxicity : Toxic\nSun Exposure :  Bright , Direct Light / Partial Shade </string>
    <string name="mint">Plant Type : Perennial\nBloom time : Summer\nColor : Green , Blue\nNative Area : Africa , Australia , North America
    \nToxicity : Toxic\nSun Exposure :  Full Sun , Part Sun </string>
    <string name="lemongrass">Plant Type: Ornamental Grass\nBloom time : No Flowers\nColor : None\nNative Area : Srilanka , India
    \nToxicity : Toxic\nSun Exposure :  Full Sun </string>
    <string name="laceleaf">Plant Type : Herbaceous perennial\nBloom time : None\nColor : None\nNative Area : Central America , Northern South America , Caribbean
    \nToxicity : Toxic\nSun Exposure : Bright Indirect Light </string>
    <string name="jasmine">Plant Type : Broadleaf Evergreen Climber\nBloom time : June to August\nColor : White\nNative Area : Asia Minor , Himalayas , China
    \nToxicity : Non-Toxic\nSun Exposure : Full Sun to Part Shade </string>
    <string name="cactus" >Plant Type : Cactus\nBloom time : Summer\nColor : Yellow , Pink , Red , Orange\nNative Area : South America
    \nToxicity : Toxic\nSun Exposure : Full Sun to Partial Shade </string>
    <string name="verbena" >Plant Type : Perennial\nBloom time : Summer , fall\nColor : Purple , Pink \nNative Area : Americas and Asia
    \nToxicity : Non-Toxic\nSun Exposure : Full Sun  </string>
    <string name="devilsivy" >Plant Type : Trailing Vine\nBloom time : Does not flower unless treated with a special hormone supplement \nColor : Does not flower
    \nToxicity : Toxic\nSun Exposure : Part Shade Outdoors , bright indirect light indoors  </string>
    <string name="fiddlefig" >Plant Type : Broadleaf Evergreen\nBloom time : Rarely flowers outside of its native area \nColor : Insignificnt\nNative Area : Tropical Western Africa
    \nToxicity : Toxic\nSun Exposure : Part Shade </string>
    <string name="englishivy" >Plant Type : Perennial Woody Evergreen vine\nBloom time : None \nColor : None\nNative Area : Northern Europe and Western Asia
    \nToxicity : Toxic\nSun Exposure :  Filtered Sun or Partial Shade </string>
    <string name="pothos" >Plant Type : Perennial , Vine\nBloom time : Spring , Summer \nColor : Green , White\nNative Area : South America
    \nToxicity : Toxic\nSun Exposure : Partial Sun </string>
    <string name="aglaonema" >Sun exposure : Bright indirect Light\n Soil Type: Well-draining potting soil\n Native Area: Asia , New Guinea\nToxicity : Toxic\nHardiness Zones : 10-11 </string>
    <string name="castiron" >Plant Type : Flowering Perennial , Houseplant\nBloom time : Early Summer \nColor : Cream with maroon on inner surface\nNative Area : Taiwan , Japanese Islands
    \nToxicity : Non-Toxic\nSun Exposure : Full Shade </string>
    <string name="swisscheese" >Plant Type : Tropical\nBloom time : Spring\nColor : None\nNative Area : Central America
    \nToxicity : Toxic\nSun Exposure : Full Sun , Partial Shade </string>
    <string name="airplant" >Plant Type : Perennial Succulent\nBloom time : None\nColor : Blue , Purple\nNative Area : South America
    \nToxicity : Non-Toxic\nSun Exposure : Partial Shade </string>
    <string name="calathea" >Plant Type : Perennial Succulent\nBloom time : \nColor : Blue , Purple\nNative Area : Eastern Brazil
    \nToxicity : Non-Toxic\nSun Exposure : Light Shade </string>
    <string name="swordfern" >Plant Type : Evergreen Fern\nBloom time : None\nColor : None\nNative Area : Australia
    \nToxicity : Non-Toxic\nSun Exposure : Partial Sun , Shade </string>
    <string name="dracaena" >Plant Type : Shrub\nBloom time : Seasonal\nColor : None\nNative Area : Africa
    \nToxicity : Toxic\nSun Exposure : Partial Sun </string>
</resources>